--- a/css/app.css
+++ b/css/app.css
@@ -21997,3 +21997,25 @@ clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 }
 
+
+.react-container{
+position:absolute;
+bottom: -12px;
+padding: 1px 3px;
+border-radius: 5px;
+font-size: 12px;
+display: flex;
+}
+.pin-div {
+    position: absolute;
+    top: -5px;
+    left: -2px;
+    transform: rotate(-45deg);
+    }
+    
+    .pin-div-sender {
+    position: absolute;
+    top: -9px;
+    right: -5px;
+    transform: rotate(45deg);
+    }
