--- a/css/app.css
+++ b/css/app.css
@@ -22387,3 +22387,25 @@ emoji-picker {
 .modal-header span {
   color: #526484;
 }
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* Styles to blur the page */
+.blur {
+  filter: blur(3px);
+}
+
+/* Your page content styles */
+.content {
+  transition: filter 0.5s;
+}
