--- a/css/app.css
+++ b/css/app.css
@@ -8141,6 +8141,11 @@ button.gridjs-sort-desc {
   margin-bottom: 0;
 }
 
+.-mb-8 {
+margin-bottom:2rem ;
+}
+
+
 .mt-3\.5 {
   margin-top: 0.875rem;
 }
@@ -22648,7 +22653,7 @@ a.btn {
   100% { transform: rotate(360deg); }
 }
 
-.spinner {
+/* .spinner {
   position: fixed;
   top: 0;
   left: 0;
@@ -22668,7 +22673,7 @@ a.btn {
   border-top: 4px solid #3498db;
   border-radius: 50%;
   animation: spin 0.8s linear infinite;
-}
+} */
 
 @keyframes spin {
   0% {
@@ -22677,4 +22682,92 @@ a.btn {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.p-10{
+  padding: 2.5rem;
+}
+.bg-indigo-500{
+  --tw-bg-opacity:1;
+  background-color:rgba(94,39,255,var(--tw-bg-opacity));
+}
+.rounded-lg {
+  border-radius: .5rem;
+}
+.transform {
+  --tw-translate-x: 0;
+  --tw-translate-y: 0;
+  --tw-rotate: 0;
+  --tw-skew-x: 0;
+  --tw-skew-y: 0;
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+
+
+.balance-spinner {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-top-color: #fff;
+  animation: spinner-rotate 1s linear infinite;
+}
+
+@keyframes spinner-rotate {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+.modal-bought {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+/* .modal-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+} */
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.modal-title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.modal-text {
+  margin-bottom: 20px;
+}
+
+.modal-button {
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
