--- a/css/app.css
+++ b/css/app.css
@@ -10357,6 +10357,8 @@ margin-bottom:2rem ;
 
 .font-semibold {
   font-weight: 600;
+  font-size: large;
+
 }
 
 .font-medium {
@@ -22828,4 +22830,53 @@ a.btn {
 }
 .absolute {
     position: absolute;
+}
+/* Modal background */
+.bg-light-gray {
+  background-color: #f4f4f4;
+}
+
+/* Modal button */
+.bg-soft-color {
+  background-color: #EAB2A0;
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+.bg-gray-500 {
+  background-color: rgb(107 114 128);
+}	
+
+
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.p-5 {
+  padding: 1.25rem;
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.border-green-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+.border-t-4 {
+  border-top-width: 4px;
+}
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}
+.fill-current {
+  fill: currentColor;
 }
