--- a/css/app.css
+++ b/css/app.css
@@ -654,6 +654,18 @@ emoji-picker {
 }
 
 
+#page-one-spinner {
+  display: inline-block;
+  width: 48px;
+  height: 48px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-top-color: #9F91CC;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  
+}
+
+
 .logo_p {
   margin-bottom: 30px;
   margin-top: 30px;
