--- a/css/app.css
+++ b/css/app.css
@@ -430,18 +430,19 @@ emoji-picker {
     background: #d8d0db;}
 
     .card-form:before {
-    content: "";
-    width: 100%;
-    height: 168px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: url(https://storage.googleapis.com/theme-vessel-items/checking-sites/oddo-2-html/HTML/main/assets/img/img-55.png) top left repeat;
-    background-size: cover;
-    z-index: 2;
-    border-radius: 30px 30px 0 0;
-}
-
+      content: "";
+      width: 100%;
+      height: 168px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background: -webkit-linear-gradient(15deg, #7844e4, #4480ed, #f8fafc, #139ecb);
+      animation: gradient 15s linear infinite;
+      background-size: 400%;
+      z-index: 2;
+      border-radius: 30px 30px 0 0;
+  }
+  
 .plans-container {
     flex-direction: row;
     width: 100%;
@@ -702,6 +703,9 @@ div#message-options {
   background-size: cover;
   z-index: 2;
   border-radius: 30px 30px 0 0;
+  /* background: -webkit-linear-gradient(15deg, #7844e4, #4480ed , #f8fafc, #139ecb); */
+/* animation: gradient 15s linear infinite; */
+/* background-size: 400%; */
 }
 
 .plans-container {
