--- a/css/app.css
+++ b/css/app.css
@@ -429,19 +429,7 @@ emoji-picker {
 .card-plan button {border: 1px solid #dcc6e2;
     background: #d8d0db;}
 
-    .card-form:before {
-      content: "";
-      width: 100%;
-      height: 168px;
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: -webkit-linear-gradient(15deg, #7844e4, #4480ed, #f8fafc, #139ecb);
-      animation: gradient 15s linear infinite;
-      background-size: 400%;
-      z-index: 2;
-      border-radius: 30px 30px 0 0;
-  }
+
   
 .plans-container {
     flex-direction: row;
@@ -695,18 +683,33 @@ div#message-options {
   .card-form:before {
   content: "";
   width: 100%;
+  height: 25px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  /* background: url(https://storage.googleapis.com/theme-vessel-items/checking-sites/oddo-2-html/HTML/main/assets/img/img-55.png) top left repeat; */
+  /* background-size: cover; */
+  z-index: 2;
+  border-radius: 30px 30px 0 0;
+  background: -webkit-linear-gradient(15deg, #7844e4, #4480ed , #f8fafc, #139ecb);
+  animation: gradient 15s linear infinite;
+  background-size: 400%
+}
+
+
+/* .card-form:before {
+  content: "";
+  width: 100%;
   height: 168px;
   position: absolute;
   top: 0;
   right: 0;
-  background: url(https://storage.googleapis.com/theme-vessel-items/checking-sites/oddo-2-html/HTML/main/assets/img/img-55.png) top left repeat;
-  background-size: cover;
+  background: -webkit-linear-gradient(15deg, #7844e4, #4480ed, #f8fafc, #139ecb);
+  animation: gradient 15s linear infinite;
+  background-size: 400%;
   z-index: 2;
   border-radius: 30px 30px 0 0;
-  /* background: -webkit-linear-gradient(15deg, #7844e4, #4480ed , #f8fafc, #139ecb); */
-/* animation: gradient 15s linear infinite; */
-/* background-size: 400%; */
-}
+} */
 
 .plans-container {
   flex-direction: row;
@@ -931,4 +934,9 @@ padding: 5em 0 8.885em 0;
   top: 50%;
   left: 50%;
 
+}
+
+.active-tab {
+  background-color:#FAF0E6;
+  /* color: #DAFFFB; */
 }
