--- a/css/app.css
+++ b/css/app.css
@@ -948,4 +948,36 @@ padding: 5em 0 8.885em 0;
 .ConversationSpinner{
   justify-content: center;
   align-items: center; 
+  height: 50px;
+  width: 50px;
 }
+
+
+
+/* Style for the loader */
+.loaderBuyButton {
+  width: 30px;
+  height: 30px;
+  position: relative;
+}
+
+.loaderBuyButton::before,
+.loaderBuyButton::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 4px solid transparent;
+  border-top-color: #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  display: none;
+}
+
+/* Keyframes for the loader animation */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
