--- a/css/app.css
+++ b/css/app.css
@@ -642,6 +642,17 @@ emoji-picker {
   animation: spin 1s linear infinite;
 }
 
+#form-spinner {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-top-color: #9F91CC;
+  border-radius: 20%;
+  animation: spin 1s linear infinite;
+}
+
+
 
 #page-one-spinner {
   display: inline-block;
