button spinners done

--- a/css/app.css
+++ b/css/app.css
@@ -676,6 +676,15 @@ emoji-picker {
   animation: spin 1s linear infinite;
 }
 
+/* .form-spinner {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border: 3px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 3px solid #ffffff;
+  animation: spin 1s linear infinite;
+} */
 
 
 #page-one-spinner {
