--- a/css/app.css
+++ b/css/app.css
@@ -734,11 +734,11 @@ div#message-options {
   /* background: url(https://storage.googleapis.com/theme-vessel-items/checking-sites/oddo-2-html/HTML/main/assets/img/img-55.png) top left repeat; */
   /* background-size: cover; */
   z-index: 2;
-  border-radius: 30px 30px 0 0;
+  border-radius: 1rem 1rem 0 0;
   background: -webkit-linear-gradient(15deg, #7844e4, #4480ed , #f8fafc, #139ecb);
   animation: gradient 15s linear infinite;
   background-size: 400%
-}
+  }
 
 
 /* .card-form:before {
